# dataconf

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  pyproject.toml
.git 2/logs/refs/heads/: master
.git 2/logs/refs/heads/dev/: python-3-7-test
.git 2/logs/refs/remotes/origin/: HEAD  master
.git 2/logs/refs/remotes/origin/dev/: python-3-7-test  sealed-trait-type-behavior
.git 2/refs/remotes/origin/: master
.git 2/refs/remotes/origin/dev/: python-3-7-test  sealed-trait-type-behavior
.github/: dependabot.yml
.github/workflows/: ci.yaml  pr-title-check.yaml  release-request.yaml  release.yaml  test-release.yaml
confs/: complex.hocon  readme.hocon  simple.hocon  simple.json  simple.yaml  test.hocon
dataconf/: __init__.py  cli.py  exceptions.py  main.py  py.typed  utils.py  version.py
reports/coverage/: coverage.xml
tests/: configs.py  conftest.py  scala_sealed_trait.py  test_cli.py  test_dict_list_parsing.py  test_env_dict.py  test_env_vars.py  test_futur_annotations.py  test_multi.py  test_parse.py  test_parser.py  test_regression.py
