[tool.poetry]
name = "dataconf"
version = "3.5.0"
description = "Simple dataclasses configuration management for Python with hocon/json/yaml/properties/env-vars/dict support."
authors = []
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/zifeo/dataconf"
include = [
    "dataconf", "pyproject.toml"
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = [
    "configuration",
    "dataclasses",
    "yaml",
    "hocon",
    "json",
    "properties",
    "cli",
    "environment variables",
]

[tool.poetry.scripts]
dataconf = 'dataconf.cli:run'

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.9.0.post0"
PyYAML = "^6.0.2"
isodate = ">=0.6.1,<0.8.0"
pyhocon = "^0.3.61"
pyparsing = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pre-commit = ">=4.2.0"
commitizen = ">=4.4.1"
pytest-httpserver = "^1.1.2"
ruff = ">=0.11.2"

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.5.0"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "pyproject.toml:version",
    "dataconf/version.py"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
